# xtb

./: .clang-format  .gitignore  CMakeLists.txt  Justfile  flake.nix
apps/: CMakeLists.txt
apps/allocator_test/: CMakeLists.txt  main.c
apps/array_test/: CMakeLists.txt  main.c
apps/bmp_test/: CMakeLists.txt  filters.c  filters.cpp  libc_file_stream.c  main.c  main.cpp  rect_selection.c  rect_selection.cpp  window_state.c  window_state.cpp
apps/cpp_bindings_test/: CMakeLists.txt  main.cpp
apps/da_test/: CMakeLists.txt  main.c
apps/json_test/: CMakeLists.txt  main.c  main.cpp  test.json
apps/os_test/: CMakeLists.txt  main.c  main.cpp
apps/str_test/: CMakeLists.txt  main.c  main.cpp
apps/thread_context_test/: CMakeLists.txt  main.c
apps/window_test/: CMakeLists.txt  main.c  main.cpp
bindings/cpp/: CMakeLists.txt
bindings/cpp/xtb_core/: CMakeLists.txt  core.cpp  core.hpp
libs/: CMakeLists.txt
libs/xtb_allocator/: CMakeLists.txt  allocator.c  allocator.h  arena.c  arena.h  malloc.c  malloc.h
libs/xtb_ansi/: CMakeLists.txt  ansi.c  ansi.cpp  ansi.h  colors_8bit.h  escape_codes.h
libs/xtb_bmp/: CMakeLists.txt  allocator.c  bitfields.c  bitmap.c  bmp.c  bmp.cpp  bmp.h  dib.c  measure.c  pixel_data.c  pixel_data_rle.c  pixel_data_traversal.c  pixel_data_uncompressed_indexed.c  pixel_data_uncompressed_non_indexed.c  prepass.c  utils.c  write.c
libs/xtb_core/: CMakeLists.txt  allocator.h  arena.c  arena.h  context_cracking.h  core.c  core.h  linked_list.h  linux_signal_handlers.c  platform_defines.h  shorthands.h  str.c  str.h  str_buffer.c  str_buffer.h  thread_context.c  thread_context.h
libs/xtb_core/include/xtb_core/: allocator.h  arena.h  array.h  context_cracking.h  contract.h  core.h  intrinsics.h  linked_list.h  logger.h  macro_helpers.h  panic.h  slice.h  stacktrace.h  str.h  str_buffer.h  string.h  thread_context.h
libs/xtb_core/src/: allocator.c  allocator.cpp  arena.c  arena.cpp  array.c  array.cpp  core.c  core.cpp  linux_signal_handlers.c  linux_signal_handlers.cpp  logger.c  logger.cpp  panic.c  panic.cpp  stacktrace.c  str.c  str_buffer.c  string.cpp  thread_context.c  thread_context.cpp
libs/xtb_core/src/stacktrace/: color_schemes.cpp  signature_parser.cpp  stacktrace.cpp
libs/xtb_da/: CMakeLists.txt  da.h
libs/xtb_json/: CMakeLists.txt  json.c  json.cpp  json.h
libs/xtb_noise/: CMakeLists.txt  noise.cpp  noise.h
libs/xtb_ogl/: CMakeLists.txt  ogl.c  ogl.cpp  ogl.h
libs/xtb_ogl/glad/include/glad/: glad.h
libs/xtb_ogl/glad/src/: glad.c
libs/xtb_ogl/shaders/: mvp_vertex.glsl
libs/xtb_ogl/tools/: shader_baker.c
libs/xtb_os/: CMakeLists.txt  file.c  libc_file.c  libc_file.cpp  os.c  os.cpp  os.h
libs/xtb_os/unix/: file.c  file.cpp
libs/xtb_renderer/: CMakeLists.txt  bezier.c  bezier.cpp  camera.c  camera.cpp  camera.h  geometry.h  material.c  material.cpp  material.h  opengl_material.c  opengl_material.cpp  polyline.c  polyline.cpp  renderer.c  renderer.cpp  renderer.h  shader.h  types.h
libs/xtb_renderer/shaders/: polyline_2d_instanced_vertex.glsl  solid_color_fragment.glsl  test_fragment.glsl  test_vertex.glsl  texture_fragment.glsl  voronoi_fragment.glsl
libs/xtb_renderer/tools/: shader_baker.c  shader_baker.cpp
libs/xtb_str/: CMakeLists.txt  str.c  str.h
libs/xtb_window/: CMakeLists.txt  window.c  window.cpp  window.h
libs/xtbm/: CMakeLists.txt  xtbm.c  xtbm.h
